--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 title: imwithpanda
 email: ahoi@iwpnd.pw
 description: geographer turned data-something
-url: https://iwpnd.pw
+url: https://iwpnd.github.io
 keywords: ["blog", "imwithpanda", "python", "data analysis", "data science", "data engineering"]
 
 #
