--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ owner:
   facebook: #username
   google:
     plus: #username
-    analytics:
+    analytics: UA-156087226-1
     verify:
     ad-client:
     ad-slot:
