--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,14 @@ highlighter:       rouge
 excerpt_separator: <!--more-->
 permalink:         /articles/:year-:month/:title
 
+
 kramdown:
   auto_ids: true
   footnote_nr: 1
   entity_output: as_char
   toc_levels: 1..6
   enable_coderay: false
+  parse_block_html: true
 
 #
 ###################################
