--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 _site
 .sass-cache
-<<<<<<< HEAD
-.jekyll-metadata
-=======
 .directory
 Thumbs.db
 _drafts
 .ruby-version
-Gemfile.loc
+Gemfile.lock
 .jekyll-cache/
->>>>>>> iwpnd-old
