--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,7 @@ plugins:
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
   - jekyll-paginate
   - jekyll-environment-variables
+  - jemoji
 
 # Exclude these files from your production _site
 exclude:
