--- a/_config.yml
+++ b/_config.yml
@@ -1,61 +1,56 @@
+site: iwpnd
+url: https://iwpnd.pw/
+title: iwpnd
+description: geographer turned data engineer turned backend developer
 
-name: iwpnd
-description: "geographer turned data something"
-keywords: ["blog", "imwithpanda", "python", "data analysis", "data science", "data engineering"]
-
-avatar: https://raw.githubusercontent.com/iwpnd/iwpnd.github.io/master/img/img.png
-favicon: https://raw.githubusercontent.com/iwpnd/iwpnd.github.io/master/favicon.png
-
-navigation:
-  - name: home
-    url: /
-  - name: archive
-    url: /archive
-paginate: 4
-excerpt_separator: <!-- more -->
-
-footer-links: 
-  weibo: 
-  behance:
-  dribbble: 
-  email: ahoi@iwpnd.pw
-  facebook:
-  flickr: 
-  github: iwpnd
-  instagram: 
-  linkedin: benjamin-ramser #https://www.linkedin.com/in/<>
-  pinterest: 
-  rss: 
-  stackoverflow: 
-  tumblr: 
+twitter:
+  username: imwithpanda
+  card: summary
+author:
   twitter: imwithpanda
-  youtube: 
+  name: iwpnd
+  avatar: /img/iwpnd-logo.png
+  email: ahoi@iwpnd.pw
 
-footer-text: Copyright (c) 2020 Benjamin Ramser
+permalink: pretty
 
-disqus: 
-
-
-# github_comments_repository: iwpnd/iwpnd-blog-comments
 google_analytics: UA-156087226-1
 
-url: https://iwpnd.pw
-baseurl: 
-permalink: /articles/:year-:month/:title #/:title/
-paginate_path: /page:num/
+baseurl: ""
 
-# The release of Jekyll Now that you're using
-version: v1.2.0
+highlighter: rouge
 
-# Jekyll 3 now only supports Kramdown for Markdown
+exclude:
+  - .jekyll-cache
+
+compress_html:
+  clippings: all
+  comments: ["<!-- ", " -->"]
+
+sass:
+  sass_dir: _sass
+  style: :compressed
+
+plugins:
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jemoji
+
+collections:
+  pages:
+    output: true
+    permalink: /:name
+  posts:
+    output: true
+    permalink: /articles/:year-:month/:title
+
 kramdown:
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
   input: GFM
-  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
   syntax_highlighter: rouge
   syntax_highlighter_opts:
-    # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
+    css_class: "highlight"
   auto_ids: true
   footnote_nr: 1
   entity_output: as_char
@@ -63,23 +58,18 @@ kramdown:
   enable_coderay: false
   parse_block_html: true
 
-# Set the Sass partials directory, as we're using @imports
-sass:
-  style: :expanded # You might prefer to minify using :compressed
-
-# Use the following plug-ins
-plugins:
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-  - jekyll-paginate
-  - jekyll-environment-variables
-  - jemoji
-
-# Exclude these files from your production _site
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE
-  - README.md
-  - CNAME
-
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: "default"
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "page"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
